corpus/c/type/case-11/snapshots/gcc15/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: type or overload mismatch
--> src/main.c:9:19
help: compare the expected type and actual argument at the call site
why: src/main.c:9:19: error: passing argument 1 of 'takes_int_ptr' from incompatible pointer type [-Wincompatible-pointer-types]
| src/main.c:9:19
|     takes_int_ptr(&box);
|                   ^
raw:
  src/main.c:9:19: error: passing argument 1 of 'takes_int_ptr' from incompatible pointer type [-Wincompatible-pointer-types]
error: linker reported a failure
help: check the missing/duplicate symbol and the object or library inputs
why: src/main.c: In function 'main':
raw:
  src/main.c: In function 'main':
      9 |     takes_int_ptr(&box);
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output